 - Fixed: Abilities not populating correctly.
 - Fixed: Balls not being set properly.
 - Added: Some more PSS stat strings to the Trainer Editor.

1/1/15 - New Update: (5300)
 - Added: Powersaves decryption via xorpads.
 - - After Using the Powersaves code-decryption method on a FF'd save file, simply rename the powersaves backup to include the word "xorpad".
 - - Place the xorpad in either the same folder as PKHeX or in the same folder where you will load the powersaves from.
 - Added: Loading of manually decrypted ORAS Powersave. Thanks Leanny!
 - Added: Alt Clicking the Open Temp folder will open the savedatafiler folder if it exists.
 - Added: Viewing of the second daycare in ORAS; click anywhere in the groupbox to trigger the switching code. Thanks Leanny!
 - Added: More verbosity to Box Report.
 - Improved: Data loading speeds (boxes, etc).
 - Improved: PKRS information will only appear if it has been infected/cured; checkboxes to alter are still always visible.
 - Fixed: Pumpkaboo form names. Thanks Pkmnninja!
 - Fixed: Checksum detection should now trigger when loading pkx files. Oops.
 - Fixed: Translation shouldn't error out if the translation file is malformed.
 - Fixed: All Encounter Types now appear (refactoring oversight). Thanks sunao!

1/11/15 - New Update: (6900)
 - Fixed: Glass (Colored) Flutes should now be in the proper pouch. Thanks SoujiSeta!
 - Fixed: Super Training copying too much and erroring out. Thanks SoujiSeta!
 - Fixed: Mono compatibility fix for inventory data editing. Thanks SoujiSeta!
 - Fixed: Deleting Wondercard recieved flags will actually save. Thanks ifyfg!
 - Fixed: X/Y xorpad auto-loading/decryption now works instead of hanging.

1/25/15 - New Update:
 - Added: PK6 Distribution Super Training flags. Still have to unlock the missions ingame with wondercards. Thanks SciresM!
 - Added: Box Import functionality for use with the spider web exploit.
 - Added: "All Files" export filter to the [Save File] main menu option.